<resources>
    <string name="app_name">IMC Calculator</string>
    <string name="calculate">Calculate</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Height</string>
    <string name="height_value">120 cm</string>
    <string name="weight">Weight</string>
    <string name="weight_value">60</string>
    <string name="add_weight_button">Add Weight Button</string>
    <string name="minus_weight_button">Minus Weight Button</string>
    <string name="age_value">21</string>
    <string name="minus_age_button">Minus Age Button</string>
    <string name="add_age_button">Add Age Button</string>
    <string name="age">Age</string>
    <string name="your_result">Your result</string>
    <string name="re_calculate">Re-Calculate</string>

    <string name="error">Error</string>

    <string name="title_bajo_peso">Bajo peso</string>
    <string name="description_bajo_peso">Estás por debajo de lo óptimo para tu peso y altura.</string>

    <string name="title_peso_normal">Normal</string>
    <string name="description_peso_normal">Estás en lo óptimo para tu peso y altura.</string>

    <string name="title_sobrepeso">Sobrepeso</string>
    <string name="description_sobrepeso">Estás por encima de lo óptimo para tu peso y altura.</string>

    <string name="title_obesidad">Obesidad</string>
    <string name="description_obesidad">Estás MUY por encima de lo óptimo para tu peso y altura.</string>
</resources>